Minor checkstyle fixes